quick fix alignment for add pages

--- a/foundation-5.0.2/css/add.css
+++ b/foundation-5.0.2/css/add.css
@@ -1,3 +1,11 @@
+ul.button-group>li{
+    float: none;
+    display: inline-block;
+}
+ul.button-group{
+    text-align: center;
+}
+
 .rating-approved {
 	color: rgba(0,0,0,255);
 	font-size: 4em;
